--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <htmL>
 	<body>
 		<h1>Vishesh Bajaj</h1>
-		<p> I am hosted on Github Pages</p>
+		<p> I am hosted on Github Pages. First Page</p>
 	</body>
 </htmL>
